welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:7: error: not found: value vance
		vance();
                ^SlugTracking:13: error: type mismatch;
 found   : Unit
 required: Boolean
		avance();
                      ^