welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {

	avance();
	if (getCouleurSol==Color.green)
	{
		vance();
	}
	else
	{
		recule();
		gauche();
		avance();
	}
}        
